--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.8.4",
     "core-js": "^3.8.3",
     "element-plus": "^2.9.7",
+    "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "querystring": "^0.2.1",
     "sass": "^1.86.0",
     "sass-loader": "^16.0.5",
